CHANGE : lien inscription et connection ajouté dans le template/home.html.twig

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr_FR">
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
@@ -14,7 +14,8 @@
         {% endblock %}
     </head>
     <body>
-        <h1>SALUT CONNARD</h1>
+        <h1>Sortir.com</h1>
+
         {% block body %}{% endblock %}
     </body>
 </html>
