ADD : formulaire modifier profil fini il faut rajouter la confirmation de mdp

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,7 +15,11 @@
     </head>
     <body>
         <h1>Sortir.com</h1>
-
+        <nav>
+            {% if app.user %}
+                <a href="{{ path('app_profil', {'participant' : app.user.id }) }}">Mon profil</a>
+            {% endif %}
+        </nav>
         {% block body %}{% endblock %}
     </body>
 </html>
