--- a/templates/sortir/list.html.twig
+++ b/templates/sortir/list.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
     <ul>
         {% for sortie in sorties %}
-            <li>{{ sortie.nom }} , durée : , date limite d'inscription : {{ sortie.dateLimiteInscription | date("Y-m-d") }}</li>
+            <li><a href="{{ path('sortir_detail', {'sortie' : sortie.id}) }}">{{ sortie.nom }}</a> , durée : {{ sortie.duree | date('H:i:s') }}, date limite d'inscription : {{ sortie.dateLimiteInscription | date("Y-m-d") }}</li>
         {% endfor %}
     </ul>
 {% endblock %}
