ADD : lien entre les pages et super maxi beau logo du site

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr_FR">
     <head>
+        <link rel="stylesheet" href="{{ asset('css/style.css') }}">
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
@@ -14,16 +15,19 @@
         {% endblock %}
     </head>
     <body>
-        <h1>Sortir.com</h1>
-        <nav>
-            {% if app.user %}
-                <p><a href="{{ path('sortir_list') }}">Accueil</a></p>
-                <p><a href="{{ path('app_logout') }}">Se déconnecter</a></p>
-                <p><a href="{{ path('app_profil', {'participant' : app.user.id }) }}">Mon profil</a></p>
+        <header>
+            <img src="{{ asset('img/sortir.png') }}">
 
-                <p><a href="{{ path('sortie_ajouter', {'participant' : app.user.id } ) }}">Ajouter une sortie</a></p>
-            {% endif %}
-        </nav>
-        {% block body %}{% endblock %}
+            <nav>
+                {% if app.user %}
+                    <p><a href="{{ path('sortir_list') }}">Accueil</a></p>
+                    <p><a href="{{ path('app_logout') }}">Se déconnecter</a></p>
+                    <p><a href="{{ path('app_profil', {'participant' : app.user.id }) }}">Mon profil</a></p>
+
+                    <p><a href="{{ path('sortie_ajouter', {'participant' : app.user.id } ) }}">Ajouter une sortie</a></p>
+                {% endif %}
+            </nav>
+            {% block body %}{% endblock %}
+        </header>
     </body>
 </html>
