--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,10 +1,39 @@
 img {
     max-width: 10%;
+    margin-right: auto;
+    margin-bottom: 1em;
+/*    display: flex;
+    text-align: center;*/
 }
 
-nav {
-    display: flex;
-    flex-direction: row;
-    margin-right: 20px;
+
+#barrenav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
 }
+
+#barrenav li {
+    float: left;
+    border-right:1px solid #bbb;
+}
+
+#barrenav li:last-child {
+    border-right: none;
+}
+
+#barrenav li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+#barrenav li a:hover:not(.active) {
+    background-color: #111;
+}
+
 
