--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,11 +17,11 @@
     <body>
         <header>
 
-            <a href="{{ path('sortir_list') }}"><img src="{{ asset('img/sortir.png') }}"></a>
+            <a href="{{ path('sortie_list') }}"><img src="{{ asset('img/sortir.png') }}" alt=""></a>
 
             <nav>
                 {% if app.user %}
-                    <p><a href="{{ path('sortir_list') }}">Accueil</a></p>
+                    <p><a href="{{ path('sortie_list') }}">Accueil</a></p>
                     <p><a href="{{ path('app_logout') }}">Se déconnecter</a></p>
                     <p><a href="{{ path('app_profil', {'participant' : app.user.id }) }}">Mon profil</a></p>
 
