--- a/templates/sortie/detail.html.twig
+++ b/templates/sortie/detail.html.twig
@@ -16,10 +16,16 @@
     <div>Durée estimée : {{ sortie.duree | date('H:i:s') }}, date limite d'inscription : {{ sortie.dateLimiteInscription | date('d/m/y H:i') }} </div> <br>
     <div>Nombre de participants max : {{ sortie.nbInscriptionMax }}</div>
 
-    <div><nav>
-            {% for participant in participants %}
-                <p>{{ participant.nom }}</p>
-            {% endfor %}
-        </nav></div>
 
+    <p>Participants : </p>
+    {% if nbParticipants == 0 %}
+        <h5><b>Il n'a pas encore de participants inscrit à la sortie.</b></h5>
+    {% else %}
+        <div><label>Pseudo : </label>   <label>Nom : </label></div>
+        <nav>
+            {% for participant in participants %}
+                <div id="pseudo"> ° {{ participant.username }} | </div> <div> {{ participant.prenom }} {{ participant.nom }}</div> <br>
+            {% endfor %}
+        </nav>
+    {% endif %}
 {% endblock %}
