CHANGE : master refait avec un seul template pour les sorties, et les routes correspondantes corrigées.

--- a/templates/sortie/detail.html.twig
+++ b/templates/sortie/detail.html.twig
@@ -27,7 +27,7 @@
         <div><label>Pseudo : </label>   <label>Nom : </label></div>
         <nav>
             {% for participant in participants %}
-                <div id="pseudo"> ° {{ participant.username }} | </div> <div> {{ participant.prenom }} {{ participant.nom }}</div> <br>
+                <div id="pseudo"> ° <a href="{{ path("app_profil" , {"participant" : participant.id}) }}">{{ participant.username }}</a> | </div> <div> {{ participant.prenom }} {{ participant.nom }}</div> <br>
             {% endfor %}
         </nav>
     {% endif %}
