--- a/templates/sortie/list.html.twig
+++ b/templates/sortie/list.html.twig
@@ -3,8 +3,8 @@
 {% block body %}
     <ul>
         {% for sortie in sorties %}
-            <li><a href="{{ path('sortie_detail', {'sortie' : sortie.id}) }}">{{ sortie.nom }}</a> , durée : {{ sortie.duree | date('H:i:s') }}, date limite d'inscription : {{ sortie.dateLimiteInscription | date("d-m-Y-H-i-s") }}
-            <a href="{{ path("sortie_inscription", {"sortie" : sortie.id}) }}">s'inscrire</a></li>
+            <li><a href="{{ path('sortie_detail', {'sortie' : sortie.id}) }}" style="text-decoration: none">{{ sortie.nom }} </a> , durée : {{ sortie.duree | date('H:i:s') }}, date limite d'inscription : {{ sortie.dateLimiteInscription | date("d-m-Y-H-i-s") }}
+            <button><a href="{{ path("sortie_inscription", {"sortie" : sortie.id}) }}" style="text-decoration: none">s'inscrire</a></button></li>
         {% endfor %}
     </ul>
 {% endblock %}
