ADD : Ville form + essayer de gérer les lieux en fonctions des villes

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr_FR">
     <head>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
         <link rel="stylesheet" href="{{ asset('css/style.css') }}">
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
