--- a/templates/sortie/ajouter.html.twig
+++ b/templates/sortie/ajouter.html.twig
@@ -5,7 +5,63 @@
     {{ form_widget(sortieForm) }}
     <button>Envoyer</button>
     {{ form_end(sortieForm) }}
+
+    <script>
+        let monVilleSelect = document.getElementById('sortie_ville');
+        let monLieuSelect = document.getElementById('sortie_lieu');
+        $('#sortie_ville').change(function () {
+            let idVille = monVilleSelect.value;
+            let adresse = "/sortie/get/lieux/" + idVille;
+            let monLieuxSelect = $('sortie_lieu');
+            $.ajax({
+                type: "GET",
+                url: adresse,
+                dataType: "json",
+                success: function (response) {
+                    //1er for pour supprimer toutes les options
+                    monLieuxSelect.remove('');
+                    for (let i = 0; i < response.length; i++) {
+                        let balLieu = document.createElement('option');
+                        balLieu.innerText = response[i]["nom"];
+                        balLieu.value = response[i]["id"];
+                        monLieuxSelect.add(balLieu);
+                    }
+                }
+            });
+        });
+
+            /*function getLieuVille() {
+                let idVille = monVilleSelect.value;
+                let adresse = "/sortie/get/lieux/" + idVille;
+                let monLieuxSelect = $('sortie_lieu');
+                let reponse = null;
+                $.ajax({
+                    type: "GET",
+                    url: adresse,
+                    dataType: "json",
+                    success: function (response) {
+                        //1er for pour supprimer toutes les options
+                        monLieuxSelect.remove('');
+                        for (let i = 0; i < response.length; i++) {
+                            let balLieu = document.createElement('option');
+                            balLieu.innerText = response[i]["nom"];
+                            balLieu.value = response[i]["id"];
+                            monLieuxSelect.add(balLieu);
+                        }
+                    }
+                });*/
+                // fetch(adresse)
+                //     .then(reponse => reponse.json());
+                // console.log(reponse);
+            //}
+
+
+        //monVilleSelect.addEventListener("change", getLieuVille());
+
+
+    </script>
 {% endblock %}
+
 
 {% block title %}
 
