CHANGE : Formulaire de recherche de sorties corrigées, les filtres fonctionnent et nous pouvons choisir tous les campus ou un spécifique.

--- a/templates/sortie/list.html.twig
+++ b/templates/sortie/list.html.twig
@@ -8,7 +8,10 @@
     <ul>
         {% for sortie in sorties %}
             <li><a href="{{ path('sortie_detail', {'sortie' : sortie.id}) }}" style="text-decoration: none">{{ sortie.nom }} </a> ,
-                durée : {{ sortie.duree | date('H:i:s') }}, date limite d'inscription : {{ sortie.dateLimiteInscription | date("d-m-Y-H-i-s") }}, statut : {{ sortie.etat.libelle }}
+                durée : {{ sortie.duree | date('H:i:s') }},
+                date limite d'inscription : {{ sortie.dateLimiteInscription | date("d/m/y H:i") }},
+                statut : {{ sortie.etat.libelle }},
+                Début : {{ sortie.dateHeureDebut | date("d/m/y H:i")}}
             <button><a href="{{ path("sortie_inscription", {"sortie" : sortie.id}) }}" style="text-decoration: none">s'inscrire</a></button>
             </li>
         {% endfor %}
