--- a/templates/sortie/detail.html.twig
+++ b/templates/sortie/detail.html.twig
@@ -33,6 +33,10 @@
     {% endif %}
     <button><a href="{{ path("sortie_inscription", {"sortie" : sortie.id}) }}" style="text-decoration: none">s'inscrire à la sortie</a></button>
     <button><a href="{{ path("sortie_desistement", {"sortie" : sortie.id}) }}" style="text-decoration: none">se désister</a></button>
+    <button><a href="{{ path("sortie_annuler", {"sortie" : sortie.id}) }}" style="text-decoration: none">supprimer la sortie</a></button>
+ {#   {% if  %}
+        <button><a href="{{ path("sortie_annuler", {"sortie" : sortie.id}) }}" style="text-decoration: none">supprimer la sortie</a></button>
+    {% endif %}#}
 
 {% endblock %}
 
