--- a/templates/sortie/detail.html.twig
+++ b/templates/sortie/detail.html.twig
@@ -31,12 +31,14 @@
             {% endfor %}
         </nav>
     {% endif %}
-    <button><a href="{{ path("sortie_inscription", {"sortie" : sortie.id}) }}" style="text-decoration: none">s'inscrire à la sortie</a></button>
-    <button><a href="{{ path("sortie_desistement", {"sortie" : sortie.id}) }}" style="text-decoration: none">se désister</a></button>
-    <button><a href="{{ path("sortie_annuler", {"sortie" : sortie.id}) }}" style="text-decoration: none">supprimer la sortie</a></button>
- {#   {% if  %}
-        <button><a href="{{ path("sortie_annuler", {"sortie" : sortie.id}) }}" style="text-decoration: none">supprimer la sortie</a></button>
-    {% endif %}#}
+    <button><a href="{{ path("sortie_inscription", {"sortie" : sortie.id}) }}" style="text-decoration: none">S'inscrire à la sortie</a></button>
+    <button><a href="{{ path("sortie_desistement", {"sortie" : sortie.id}) }}" style="text-decoration: none">Se désister</a></button>
+    {% if (sortie.etat.libelle == "Ouverte")%}
+        <button><a href="{{ path("sortie_annuler", {"sortie" : sortie.id}) }}" style="text-decoration: none">Annuler la sortie</a></button>
+    {% endif %}
+    {% if not (sortie.etat.libelle == "Ouverte")%}
+        <button><a href="{{ path("sortie_supprimer", {"sortie" : sortie.id}) }}" style="text-decoration: none">Supprimer la sortie</a></button>
+    {% endif %}
 
 {% endblock %}
 
