--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -12,6 +12,6 @@
         }) }}
         {{ form_row(registrationForm.agreeTerms) }}
 
-        <button type="submit" class="btn">Register</button>
+        <button type="submit" class="btn">S'identifier</button>
     {{ form_end(registrationForm) }}
 {% endblock %}
