--- a/templates/sortie/ajouter.html.twig
+++ b/templates/sortie/ajouter.html.twig
@@ -6,6 +6,7 @@
     <button name="formBouton" value="enregistrer">Enregistrer</button>
     <button name="formBouton" value="publier">Publier</button>
     {{ form_end(sortieForm) }}
+    <button>ajouter un lieu</button>
 
     <script>
 
