--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,7 @@
 body{
     background-color: #f3f0f0;
 }
-img {
-
+.logo img {
     max-width: 10%;
     margin-right: auto;
     margin-bottom: 1em;
@@ -17,6 +16,7 @@ img {
     padding: 0;
     overflow: hidden;
     background-color: #333;
+    margin-bottom: 1em;
 }
 
 #barrenav li {
@@ -44,11 +44,14 @@ form{
     text-align: center;
 }
 
-#photoprofil img{
-    border: solid 1px;
+#photoprofil img {
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+    width: 5em;
+    height: 5em;
     border-radius: 50%;
-    width: 20em;
-    height: 11em;
+    border: solid 1px ;
 }
 
 
