--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,7 +4,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
         <link rel="stylesheet" href="{{ asset('css/style.css') }}">
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}Bienvenue !{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
        {# <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">#}
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
@@ -19,7 +19,7 @@
     <body>
         <header>
 
-            <a href="{{ path('sortie_list') }}"><img src="{{ asset('img/sortir.png') }}" alt=""></a>
+           <div class="logo"><a href="{{ path('sortie_list') }}"><img src="{{ asset('img/sortir.png') }}" alt=""></a></div>
 
             <nav>
                 {% if app.user %}
