--- a/public/css/profilParticipant.css
+++ b/public/css/profilParticipant.css
@@ -31,3 +31,35 @@
 }
 
 
+label {
+    width: 300px;
+    display: inline-block;
+    vertical-align: top;
+    margin: 6px;
+}
+
+
+input, textarea {
+    width: 250px;
+    margin-top: 1em;
+}
+
+textarea {
+    height: 100px;
+    margin-top: 1em;
+}
+
+select {
+    width: 254px;
+}
+
+input[type=checkbox] {
+    width: 10px;
+    margin-top: 1em ;
+}
+
+input[type=submit] {
+    width: 200px;
+    padding: 10px;
+}
+
