--- a/templates/sortie/ajouter.html.twig
+++ b/templates/sortie/ajouter.html.twig
@@ -6,10 +6,16 @@
     <button name="formBouton" value="enregistrer">Enregistrer</button>
     <button name="formBouton" value="publier">Publier</button>
     {{ form_end(sortieForm) }}
-    <button>ajouter un lieu</button>
+    <button id="bouton_ajout_lieu">ajouter un lieu</button>
 
     <script>
+        $add_lieu = false;
 
+        $("#bouton_ajout_lieu").click( function () {
+            let formulaire_sortie = document.getElementById("sortie").parentNode;
+            let input_nom_lieu = document.createElement("textarea");
+            formulaire_sortie.appendChild(input_nom_lieu);
+        })
 
         $('#sortie_ville').change(function () {
             let idVille = document.getElementById('sortie_ville').value;
@@ -31,6 +37,8 @@
                 }
             });
         });
+
+        $
     </script>
 {% endblock %}
 
