--- a/templates/sortie/ajouter.html.twig
+++ b/templates/sortie/ajouter.html.twig
@@ -8,17 +8,66 @@
         {{ form_widget(sortieForm) }}
         <button name="formBouton" value="enregistrer">Enregistrer</button>
         <button name="formBouton" value="publier">Publier</button>
+        <button id="bouton_ajout_lieu">ajouter un lieu</button>
+        <div id="nouveau_lieu_div"></div>
         {{ form_end(sortieForm) }}
-    <button id="bouton_ajout_lieu">ajouter un lieu</button>
+
+
     </div>
     
     <script>
-        $add_lieu = false;
+        let add_lieu = false;
 
         $("#bouton_ajout_lieu").click( function () {
-            let formulaire_sortie = document.getElementById("sortie").parentNode;
-            let input_nom_lieu = document.createElement("textarea");
-            formulaire_sortie.appendChild(input_nom_lieu);
+            add_lieu = !add_lieu;
+            let div_nouveau_lieu= document.getElementById("nouveau_lieu_div");
+            if (add_lieu === true) {
+
+                let labelnom = document.createElement("label");
+                labelnom.innerHTML = "Nom : ";
+                let input_nom_lieu = document.createElement("textarea");
+                let labelrue = document.createElement("label");
+                labelrue.innerHTML = "Rue : ";
+                let input_rue_lieu = document.createElement("textarea");
+                let labelcp = document.createElement("label");
+                labelcp.innerHTML = "Code postal : ";
+                let input_cp_lieu = document.createElement("input");
+                input_cp_lieu.setAttribute("type", "number")
+                let labellat = document.createElement("label");
+                labellat.innerHTML = "Latitude : ";
+                let input_latitude_lieu = document.createElement("input");
+                input_latitude_lieu.setAttribute("type", "number");
+                let labellong = document.createElement("label");
+                labellong.innerHTML = "Long : ";
+                let input_longitude_lieu = document.createElement("input");
+                input_longitude_lieu.setAttribute("type", "number");
+
+                div_nouveau_lieu.appendChild(labelnom);
+                div_nouveau_lieu.appendChild(input_nom_lieu);
+                let lineBreak = document.createElement('BR');
+                div_nouveau_lieu.appendChild(lineBreak);
+                div_nouveau_lieu.appendChild(labelrue);
+                div_nouveau_lieu.appendChild(input_rue_lieu);
+                lineBreak = document.createElement('BR');
+                div_nouveau_lieu.appendChild(lineBreak);
+                div_nouveau_lieu.appendChild(labelcp);
+                div_nouveau_lieu.appendChild(input_cp_lieu);
+                lineBreak = document.createElement('BR');
+                div_nouveau_lieu.appendChild(lineBreak);
+                div_nouveau_lieu.appendChild(labellat);
+                div_nouveau_lieu.appendChild(input_latitude_lieu);
+                lineBreak = document.createElement('BR');
+                div_nouveau_lieu.appendChild(lineBreak);
+                div_nouveau_lieu.appendChild(labellong);
+                div_nouveau_lieu.appendChild(input_longitude_lieu);
+                lineBreak = document.createElement('BR');
+                div_nouveau_lieu.appendChild(lineBreak);
+
+            }
+            else {
+                div_nouveau_lieu.innerHTML = "";
+            }
+
         })
 
         $('#sortie_ville').change(function () {
