CHANGE : Js ajout lieu

--- a/templates/sortie/ajouter.html.twig
+++ b/templates/sortie/ajouter.html.twig
@@ -6,11 +6,11 @@
     <div class="container">
         {{ form_start(sortieForm) }}
         {{ form_widget(sortieForm) }}
+        <div id="nouveau_lieu_div"></div>
         <button name="formBouton" value="enregistrer">Enregistrer</button>
         <button name="formBouton" value="publier">Publier</button>
-        <button id="bouton_ajout_lieu">ajouter un lieu</button>
-        <div id="nouveau_lieu_div"></div>
         {{ form_end(sortieForm) }}
+        <button id="bouton_ajout_lieu">ajouter un lieu</button>
 
 
     </div>
@@ -25,22 +25,29 @@
 
                 let labelnom = document.createElement("label");
                 labelnom.innerHTML = "Nom : ";
-                let input_nom_lieu = document.createElement("textarea");
+                let input_nom_lieu = document.createElement("input");
+                input_nom_lieu.required = true;
+                input_nom_lieu.id = "input_nom_lieu";
+                input_nom_lieu.setAttribute("type", "text");
                 let labelrue = document.createElement("label");
                 labelrue.innerHTML = "Rue : ";
-                let input_rue_lieu = document.createElement("textarea");
-                let labelcp = document.createElement("label");
-                labelcp.innerHTML = "Code postal : ";
-                let input_cp_lieu = document.createElement("input");
-                input_cp_lieu.setAttribute("type", "number")
+                let input_rue_lieu = document.createElement("input");
+                input_rue_lieu.required = true;
+                input_rue_lieu.id = "input_rue_lieu";
+                input_rue_lieu.setAttribute("type", "text");
                 let labellat = document.createElement("label");
                 labellat.innerHTML = "Latitude : ";
                 let input_latitude_lieu = document.createElement("input");
+                input_latitude_lieu.required = true;
                 input_latitude_lieu.setAttribute("type", "number");
+                input_latitude_lieu.id = "input_latitude_lieu";
                 let labellong = document.createElement("label");
                 labellong.innerHTML = "Long : ";
                 let input_longitude_lieu = document.createElement("input");
                 input_longitude_lieu.setAttribute("type", "number");
+                input_longitude_lieu.required = true;
+                input_longitude_lieu.id = "input_longitude_lieu";
+
 
                 div_nouveau_lieu.appendChild(labelnom);
                 div_nouveau_lieu.appendChild(input_nom_lieu);
@@ -48,10 +55,6 @@
                 div_nouveau_lieu.appendChild(lineBreak);
                 div_nouveau_lieu.appendChild(labelrue);
                 div_nouveau_lieu.appendChild(input_rue_lieu);
-                lineBreak = document.createElement('BR');
-                div_nouveau_lieu.appendChild(lineBreak);
-                div_nouveau_lieu.appendChild(labelcp);
-                div_nouveau_lieu.appendChild(input_cp_lieu);
                 lineBreak = document.createElement('BR');
                 div_nouveau_lieu.appendChild(lineBreak);
                 div_nouveau_lieu.appendChild(labellat);
@@ -67,7 +70,6 @@
             else {
                 div_nouveau_lieu.innerHTML = "";
             }
-
         })
 
         $('#sortie_ville').change(function () {
