--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Connecté !{% endblock %}
+{% block title %}Connectez-vous !{% endblock %}
 
 {% block body %}
 <form method="post">
