--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -3,14 +3,37 @@
 {% block title %}Register{% endblock %}
 
 {% block body %}
-    <h1>Register</h1>
+
+    <link rel="stylesheet" href="{{ asset('css/connection.css') }}">
+    <h1 style="text-align: center">Register</h1>
 
     {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.username) }}
-        {{ form_row(registrationForm.plainPassword, {
-            label: 'Password'
+        {{ form_row(registrationForm.username, {
+            label : "pseudo : "
         }) }}
-        {{ form_row(registrationForm.agreeTerms) }}
+        {{ form_row(registrationForm.plainPassword, {
+            label: 'mot de passe : '
+        }) }}
+        {{ form_row(registrationForm.nom, {
+            label : "Nom : "
+        })  }}
+        {{ form_row(registrationForm.prenom, {
+            label : "Prenom : "
+        })  }}
+        {{ form_row(registrationForm.telephone, {
+            label : "Téléphone : "
+        })  }}
+        {{ form_row(registrationForm.email, {
+            label : "Email : "
+        })  }}
+        {{ form_row(registrationForm.campus, {
+            label : "Campus : "
+        })  }}
+        {{ form_row(registrationForm.agreeTerms, {
+            label : "J'accepte les termes de confidentialité"
+        }) }}
+
+
 
         <button type="submit" class="btn">S'identifier</button>
     {{ form_end(registrationForm) }}
