--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -3,22 +3,25 @@
 {% block title %}Connectez-vous !{% endblock %}
 
 {% block body %}
-<form method="post">
+
+    <link rel="stylesheet" href="{{ asset('css/connection.css') }}">
+
+    <form method="post">
     {% if error %}
         <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
     {% endif %}
 
     {% if app.user %}
         <div class="mb-3">
-            Vous êtes connecter en tant que {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Se déconnecter</a>
+            Vous êtes connecté en tant que {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Se déconnecter</a>
         </div>
     {% endif %}
 
-    <h1 class="h3 mb-3 font-weight-normal">Veuillez vous connectez</h1>
+    <h1 class="h3 mb-3 font-weight-normal">Veuillez vous connecter</h1>
     <label for="inputUsername">Nom d'utilisateur / Mail </label>
-    <input type="text" value="{{ last_username }}" name="username" id="inputUsername" class="form-control" autocomplete="username" required autofocus>
+    <input type="text" value="{{ last_username }}" name="username" id="inputUsername" class="form-control" autocomplete="username" required autofocus> <br>
     <label for="inputPassword">Mot de passe </label>
-    <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+    <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required> <br>
 
     <input type="hidden" name="_csrf_token"
            value="{{ csrf_token('authenticate') }}"
@@ -38,6 +41,7 @@
     <button class="btn btn-lg btn-primary" type="submit">
         Se connecter
     </button>
+    <button><a href="/register" style="text-decoration: none">S'inscrire</a></button> <br>
     <a href="{{ path('app_forgot_password_request') }}">mot de passe oublié</a>
 </form>
 {% endblock %}
