CHANGE : léger JS

--- a/templates/sortie/modifier.html.twig
+++ b/templates/sortie/modifier.html.twig
@@ -5,6 +5,7 @@
 {% endblock %}
 
 {% block body %}
+    <link rel="stylesheet" href="{{ asset('css/ajoutSortie.css') }}">
     {{ form_start(sortieForm) }}
     {{ form_widget(sortieForm) }}
     <button name="formBouton" value="enregistrer">Enregistrer</button>
